# GeminiASR

./: .env.sample  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  README.zh-TW.md  config.example.toml  gemini_asr.py  pyproject.toml  test_upload.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
examples/: basic_usage.py
scripts/: upload_demo.py
src/geminiasr/: __main__.py  api_keys.py  cli.py  config.py  constants.py  errors.py  logging.py  media.py  prompt.py  srt.py  transcription.py
tests/: test_config_smoke.py
utils/: api_key_manager.py  config_manager.py  constants.py
