[project]
name = "geminiasr"
version = "1.0.0"
description = "A Python tool that uses Google Gemini API to transcribe video or audio files into SRT subtitle files."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-genai>=1.13.0",
    "langchain>=0.3.24",
    "moviepy==1.0.3",
    "python-dotenv>=1.1.0",
    "tomli>=1.2.0",
]
